hphp/hack/test/typecheck/variablevariable_no_name.php.exp
File "variablevariable_no_name.php", line 4, characters 10-10:
A valid variable name starts with a letter or underscore, followed by any number of letters, numbers, or underscores (Parsing[1002])
