hphp/hack/test/typecheck/variablevariable_no_name.php
<?hh // partial

function foo(): varray<int> {
  return $$$;
}
